cmake_minimum_required(VERSION 3.14)
project(comp-prog-hash-map-dp-1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(question1 question1_my_hash_map.cpp)
add_executable(question2 question2_linked_list.cpp)
add_executable(question3 question3_fibonacci.cpp)
add_executable(question4 question4_factorial.cpp)
add_executable(question5 question5_climb_stairs.cpp)
add_executable(question6 question6_coin_amounts.cpp)
